--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-VITE_API_BASE_URL=http://localhost:8080
-VITE_URL_IMAGES=http://localhost:8080/uploads
+VITE_API_BASE_URL=https://shop-app-mdax.onrender.com
+VITE_URL_IMAGES=https://shop-app-mdax.onrender.com/uploads
